# py-ai-agent

./: .env.example  .gitignore  README.md  consumer.py  database.py  main.py  models.py  pyproject.toml
agents/: chat.py  mongo_rag.py  rag.py
bruno/: Process File.bru  TestSearch.bru  TestSplit.bru  bruno.json  mongo-test.bru  result.json  root.bru  webhook-default.bru  webhook-rag-ask.bru  webhook-rag-build.bru
databases/: mongo.py  rabbitmq.py  vector.py
httprest/: learning.http
public/: chat_app.ts  index.html
routers/: chat.py  default_webhook.py  learning.py  rag_webhook.py
services/: file_processor.py
utils/: embedding.py
